Bump dependencies versions.