@@ -37,32 +37,35 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <!--        <maven.compiler.release>11</maven.compiler.release>-->
 
         <commons.cli.version>1.4</commons.cli.version>
-        <error.prone.version>2.0.21</error.prone.version>
-        <findbugs.version>3.0.4</findbugs.version>
+        <error.prone.version>2.9.0</error.prone.version>
+        <findbugs.version>3.0.5</findbugs.version>
         <grpc.protobuf.version>1.7.0</grpc.protobuf.version>
-        <guava.version>30.0-jre</guava.version>
-        <junit.params.version>1.1.0</junit.params.version>
+        <guava.version>30.1.1-jre</guava.version>
+        <javax.annotation.version>1.3.2</javax.annotation.version>
+        <junit.params.version>1.1.1</junit.params.version>
         <junit.version>4.13.1</junit.version>
-        <openhft.version>0.8</openhft.version>
-        <slf4j.version>1.7.24</slf4j.version>
-        <zeromq.version>0.4.3</zeromq.version>
+        <openhft.version>0.15</openhft.version>
+        <slf4j.version>1.7.32</slf4j.version>
+        <zeromq.version>0.5.2</zeromq.version>
 
         <coveralls.maven.plugin.version>4.3.0</coveralls.maven.plugin.version>
-        <jococo.maven.plugin.version>0.7.9</jococo.maven.plugin.version>
-        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
-        <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
-        <maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
-        <maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
-        <maven.javadoc.plugin.version>2.10.4</maven.javadoc.plugin.version>
+        <jococo.maven.plugin.version>0.8.7</jococo.maven.plugin.version>
+        <maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
+        <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
+        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+        <maven.gpg.plugin.version>3.0.1</maven.gpg.plugin.version>
+        <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
         <maven.replacer.plugin.version>1.5.3</maven.replacer.plugin.version>
-        <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
-        <maven.staging.plugin.version>1.6.7</maven.staging.plugin.version>
-        <maven.surefire.plugin.version>2.20.1</maven.surefire.plugin.version>
-        <os.maven.plugin.version>1.5.0.Final</os.maven.plugin.version>
-        <protobuf.maven.plugin.version>0.5.1</protobuf.maven.plugin.version>
-        <plexus.compiler.version>2.8</plexus.compiler.version>
+        <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
+        <maven.staging.plugin.version>1.6.8</maven.staging.plugin.version>
+        <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
+        <os.maven.plugin.version>1.7.0</os.maven.plugin.version>
+        <plexus.compiler.version>2.8.8</plexus.compiler.version>
+        <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
+        <puppycrawl.checkstyle.plugin.version>8.45.1</puppycrawl.checkstyle.plugin.version>
     </properties>
 
     <developers>
@@ -97,6 +100,12 @@
                 <groupId>com.github.lalithsuresh</groupId>
                 <artifactId>rapid</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${javax.annotation.version}</version>
             </dependency>
 
             <dependency>
@@ -177,6 +186,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>${maven.checkstyle.plugin.version}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.puppycrawl.tools</groupId>
+                            <artifactId>checkstyle</artifactId>
+                            <version>${puppycrawl.checkstyle.plugin.version}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
 
                 <plugin>
@@ -255,36 +271,35 @@
                 <artifactId>maven-compiler-plugin</artifactId>
 
                 <configuration>
-                    <compilerId>javac-with-errorprone</compilerId>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
-
                     <!-- maven-compiler-plugin defaults to targeting Java 5, but our javac only supports >=6 -->
                     <source>8</source>
                     <target>8</target>
+                    <!--                    <release>11</release>-->
                     <showWarnings>true</showWarnings>
 
                     <!-- Protobuf/grpc generated sources triggers too many warnings -->
                     <compilerArgs>
-                        <arg>-XepDisableWarningsInGeneratedCode</arg>
-                        <arg>-Werror</arg>
+                        <arg>-XDcompilePolicy=simple</arg>
+                        <arg>-Xplugin:ErrorProne -XepDisableWarningsInGeneratedCode -Werror</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                     </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>com.google.errorprone</groupId>
+                            <artifactId>error_prone_core</artifactId>
+                            <version>${error.prone.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
-
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.plexus</groupId>
-                        <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                        <version>${plexus.compiler.version}</version>
-                    </dependency>
-
-                    <!-- override plexus-compiler-javac-errorprone's dependency on
-                         Error Prone with the latest version -->
-                    <dependency>
-                        <groupId>com.google.errorprone</groupId>
-                        <artifactId>error_prone_core</artifactId>
-                        <version>${error.prone.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
 
             <!-- Findbugs -->
